# TestTask

./: .gitignore  .~lock.asd.csv#  CMakeLists.txt  README.md  asd.csv  asd.csv_received
CsvRxTx/: CsvRxTx.cpp  CsvRxTx.h
TcpRxTx/: TcpRxTx.cpp  TcpRxTx.h
client/: CMakeLists.txt  CliArgs.cpp  CliArgs.h  CsvHandler.cpp  CsvHandler.h  TcpClient.cpp  client.cpp
client/csv_utils/: CsvGenerator.cpp  CsvGenerator.h  CsvHandler.h
client/networking/: TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h
server/: CMakeLists.txt  ClientHandler.h  TcpServer.cpp  TcpServer.h  server.cpp
server/logging/: logging.cpp  logging.h
server/networking/: ClientHandler.cpp  ClientHandler.h  TcpServer.cpp  TcpServer.h
